2009-10-30  Eric Seidel  <eric@webkit.org>

        No review, rolling out r50105.
        http://trac.webkit.org/changeset/50105

        This commit was causing:
        https://bugs.webkit.org/show_bug.cgi?id=30869
        We'll re-implement the feature a different way.

        * Scripts/bugzilla-tool:

2009-10-29  Jon Honeycutt  <jhoneycutt@apple.com>

        Test for MSAA: Accessibility of headings is not correct

        https://bugs.webkit.org/show_bug.cgi?id=30937

        Reviewed by Adam Roben.

        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::role):
        Allow the role returned to be a BSTR.
        (AccessibilityUIElement::description):
        Fix a copy/paste error.

2009-10-29  Jon Honeycutt  <jhoneycutt@apple.com>

        Test for MSAA: Accessibility of links is wrong

        https://bugs.webkit.org/show_bug.cgi?id=30928

        Reviewed by Darin Adler.

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (getAccessibilityValueCallback):
        Return the accessibility value.
        (AccessibilityUIElement::getJSClass):
        Added "accessibilityValue" value.

        * DumpRenderTree/AccessibilityUIElement.h:

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::accessibilityValue):
        Stubbed.

        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::accessibilityValue):
        Stubbed.

        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::accessibilityValue):
        Get the object's value, and return it as a JS string.

2009-10-30  Kevin Ollivier  <kevino@theolliviers.com>

        Fix typo in command name used by wx build system.

        * wx/build/build_utils.py:

2009-10-30  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Patch v1 is a dumb default name for patches
        https://bugs.webkit.org/show_bug.cgi?id=30952
